--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@id/homeFragment"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@id/searchFragment"
+        android:icon="@android:drawable/ic_search_category_default"
+        android:title="@android:string/search_go" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@id/uploadImageFragment"
+        android:icon="@android:drawable/ic_menu_add"
+        android:title="upload" />
+
+    <item
+        android:id="@id/notificationsFragment"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
+
+    <item
+        android:id="@id/profileFragment"
+        android:icon="@android:drawable/ic_menu_myplaces"
+        android:title="profile" />
 
 </menu>
