add a new user list frangment

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -36,7 +36,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <include
-        layout="@layout/user_list"
+        layout="@layout/fragment_user_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
