when clicking on following or followers buttons from profile change the fragment to the search fragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_homeFragment_to_commentsFragment"
             app:destination="@id/commentsFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_searchFragment"
+            app:destination="@id/searchFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
@@ -25,9 +28,6 @@
         <action
             android:id="@+id/action_searchFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
-        <action
-            android:id="@+id/action_searchFragment_to_UserListFragment"
-            app:destination="@id/UserListFragment" />
     </fragment>
     <fragment
         android:id="@+id/uploadImageFragment"
@@ -52,9 +52,6 @@
             android:id="@+id/action_profileFragment_to_commentsFragment"
             app:destination="@id/commentsFragment" />
         <action
-            android:id="@+id/action_profileFragment_to_UserListFragment"
-            app:destination="@id/UserListFragment" />
-        <action
             android:id="@+id/action_profileFragment_to_post"
             app:destination="@id/post" />
     </fragment>
@@ -63,11 +60,6 @@
         android:name="com.example.profily.CommentsFragment"
         android:label="fragment_comments"
         tools:layout="@layout/fragment_comments" />
-    <fragment
-        android:id="@+id/UserListFragment"
-        android:name="com.example.profily.User.UserListFragment"
-        android:label="fragment_user_list"
-        tools:layout="@layout/fragment_user_list" />
     <fragment
         android:id="@+id/post"
         android:name="com.example.profily.Post.Post"
