--- a/app/src/main/res/layout/user_list.xml
+++ b/app/src/main/res/layout/user_list.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="0dp"
+        android:paddingBottom="?attr/actionBarSize" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
