--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Comments.CommentsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -13,5 +13,17 @@
         android:layout_marginTop="8dp"
         tools:layout_editor_absoluteX="0dp"
         android:paddingBottom="?attr/actionBarSize" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/add_more_comments_btn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="75dp"
+        android:src="@drawable/plus"
+        app:civ_border_color="#000"
+        app:civ_border_width="1dp"
+        app:layout_constraintBottom_toBottomOf="@+id/comments_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
