--- a/app/src/main/res/layout/notification_row.xml
+++ b/app/src/main/res/layout/notification_row.xml
@@ -20,9 +20,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:text="UserName"
         android:textColor="@android:color/black"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/notifications_effected_user_image"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/notification_trigger_user_image"
         app:layout_constraintTop_toTopOf="@+id/notification_trigger_user_image" />
 
