--- a/app/src/main/res/layout/post_row.xml
+++ b/app/src/main/res/layout/post_row.xml
@@ -104,7 +104,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
-        android:text="View all 20 comments"
+        android:text="View comments"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/post_caption" />
