--- a/app/src/main/res/layout/activity_upload_image.xml
+++ b/app/src/main/res/layout/activity_upload_image.xml
@@ -12,11 +12,11 @@
     <LinearLayout
         android:id="@+id/upload_image_operations_group"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="32dp"
         android:orientation="vertical"
         android:paddingBottom="?attr/actionBarSize"
         android:visibility="visible"
@@ -26,24 +26,10 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/upload_image_gallery"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.48"
-            android:alpha="0.7"
-            android:background="@drawable/gallery"
-            android:gravity="center"
-            android:text="Choose from gallery"
-            android:textColor="@android:color/black"
-            android:textColorHighlight="@android:color/black"
-            android:textSize="36sp"
-            android:textStyle="bold" />
-
-        <TextView
             android:id="@+id/upload_image_camera"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.48"
+            android:layout_weight="0.3"
             android:alpha="0.7"
             android:background="@drawable/camera"
             android:gravity="center"
